--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+p, h3 {
+    margin: 0px;
+}
+
 h1.mainHeading {
   text-align: center;  
 }
+
+div h3.formHeader {
+    padding-bottom: 5%;
+}
+
 div.form {
     display: block;
     text-align: center;
+    border: 2px grey solid;
+    border-radius: 50px;
+    margin: 5% 15%;
+    padding: 5%;
 }
